modificacion de material

--- a/materiales/templates/home.html
+++ b/materiales/templates/home.html
@@ -28,7 +28,7 @@
             <div class="content-overlay d-flex flex-column justify-content-center align-items-start">
                 <a class="btn btn-home mb-3" role="button">PRESTAMOS</a>
                 <a class="btn btn-home mb-3" href="{% url 'alta_materiales' %}" role="button">ALTA MATERIAL</a>
-                <a class="btn btn-home mb-3" role="button">MODIFICACION <br>MATERIAL</a>
+                <a class="btn btn-home mb-3" href="{% url 'modificacion_materiales' %}" role="button">MODIFICACION <br>MATERIAL</a>
             </div>
         </div>
     </div>
