--- a/materiales/templates/materiales/formularios_altas/formulario_libro.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_libro.html
@@ -73,6 +73,15 @@
             max-height: 70vh;
             overflow-y: auto;
         }
+
+       #id_sede {
+        padding:5px
+       }
+
+       #id_disponiblidad {
+        padding:5%
+       }
+
     </style>
 {% endblock %}
 
