--- a/materiales/templates/materiales/formularios_altas/formulario_libro.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_libro.html
@@ -157,13 +157,13 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-sm-6 col-lg-4 form-group mb-3">
+            {% comment %} <div class="col-12 col-sm-6 col-lg-4 form-group mb-3">
                 <label for="{{ form.num_inventario.id_for_label }}" class="text-input" style="color:#25898D;">Número de Inventario:</label>
                 {{ form.num_inventario }}
                 {% if form.num_inventario.errors %}
                     <div class="text-danger">{{ form.num_inventario.errors }}</div>
                 {% endif %}
-            </div>
+            </div> {% endcomment %}
             <div class="col-12 col-sm-6 col-lg-4 form-group mb-3">
                 <label for="{{ form.sede.id_for_label }}" class="text-input" style="color:#25898D;">Sede:</label>
                 {{ form.sede }}
@@ -375,7 +375,7 @@ document.addEventListener('DOMContentLoaded', function() {
             const siglas = form.querySelector('[name="siglas_autor_titulo"]')?.value || 'Sin especificar';
             const clasificacion = form.querySelector('[name="clasificacion_cdu"]')?.value || 'Sin especificar';
             const palabras = form.querySelector('[name="etiqueta_palabra_clave"]')?.value || 'Sin especificar';
-            const inventario = form.querySelector('[name="num_inventario"]')?.value || 'Sin especificar';
+           // const inventario = form.querySelector('[name="num_inventario"]')?.value || 'Sin especificar';
             const ejemplar = form.querySelector('[name="num_ejemplar"]')?.value || 'Sin especificar';
             const observaciones = form.querySelector('[name="observaciones"]')?.value || 'Sin observaciones';
             const imagen = form.querySelector('[name="img"]')?.value || 'Sin imagen';
