--- a/biblioteca_digital/views/templates/modals/manual_modal.html
+++ b/biblioteca_digital/views/templates/modals/manual_modal.html
@@ -67,7 +67,7 @@
             <ul>
                 <li><strong>Marca</strong>: Fabricante del equipo.</li>
                 <li><strong>Modelo</strong>: Modelo específico.</li>
-                <li><strong>Número de serie</strong>: Identificador único del dispositivo.</li>
+                <li><strong>Número de registro</strong>: Identificador único del dispositivo.</li>
                 <li><strong>Características</strong>: Especificaciones técnicas relevantes.</li>
             </ul>
             
